--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -486,7 +486,7 @@
 
 @media only screen and (max-width: 425px) {
   .header {
-    position: relative;
+    /* position: relative; */
     display: flex;
     flex-direction: row;
     height: auto;
