--- a/src/Screens/CustomerPortal/Components/VehicleComp/VehicleComp.css
+++ b/src/Screens/CustomerPortal/Components/VehicleComp/VehicleComp.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    transition: 0.5s;
 }
 
 .vehicleImageContainer {
@@ -33,6 +34,7 @@
     font-size: 1rem;
     font-weight: 600;
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .extraVehicleTextReveal {
@@ -43,6 +45,8 @@
     transition: 0.5s;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    transition: 0.5s;
 }
 
 .vehicleContainer:hover {
