--- a/src/Screens/CustomerPortal/Components/VehicleComp/VehicleComp.css
+++ b/src/Screens/CustomerPortal/Components/VehicleComp/VehicleComp.css
@@ -9,6 +9,21 @@
     align-items: center;
     justify-content: space-between;
     transition: 0.5s;
+    cursor: pointer;
+}
+
+.vehicleContainerSelected {
+    height: 200px;
+    width: 200px;
+    border-radius: 15px;
+    background-color: #FFECC0;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    transition: 0.5s;
+    cursor: pointer;
 }
 
 .vehicleImageContainer {
@@ -71,6 +86,29 @@
 }
 
 .vehicleContainer:hover .extraVehicleTextReveal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.vehicleContainerSelected:hover .vehicleImageContainer {
+    cursor: pointer;
+    height: 50%;
+    width: 50%;
+}
+
+.vehicleContainerSelected:hover .vehicleImageContainer img {
+    width: 80%;
+    height: auto;
+}
+
+.vehicleContainerSelected:hover .vehicleTextContainer {
+    cursor: pointer;
+    height: 50%;
+}
+
+.vehicleContainerSelected:hover .extraVehicleTextReveal {
     display: flex;
     justify-content: center;
     align-items: center;
