--- a/src/Screens/DriverLanding.css
+++ b/src/Screens/DriverLanding.css
@@ -81,9 +81,28 @@
   padding-bottom: 100px;
 }
 
+.getQButton {
+  color: #DAA83E;
+  font-weight: 800;
+  background-color: white;
+  font-size: 2rem;
+  padding: 10px 20px;
+  margin-bottom: 70px;
+  border-radius: 15px;
+}
+
+.getQButton:hover {
+  transition: 0.5s;
+  curve: ease;
+  box-shadow: 0 8px 0px 0 #DAA83E;
+  cursor: pointer;
+}
+
 .hero-text>h1 {
   font-size: 70px;
-  font-weight: 700;
+  font-weight: 800;
+  color: #DAA83E;
+  text-shadow: 5px 5px #000000;
 }
 
 .hero-text>p {
@@ -423,6 +442,12 @@
     width: 50%;
   }
 
+  .getQButton {
+    margin-bottom: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
   .map>video {
     height: 30vh;
     object-fit: cover;
@@ -454,7 +479,13 @@
   }
 
   .hero-text>p {
-    padding: 10px;
+    /* padding: 10px; */
+  }
+
+  .getQButton {
+    margin-bottom: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .flow-item {
@@ -513,6 +544,10 @@
     flex-direction: row;
     height: auto;
     gap: 10px;
+  }
+
+  .hero-text {
+    margin-top: 300px;
   }
 
   .hero>video {
