--- a/src/Screens/CustomerPortal/Quote/QuotePage.css
+++ b/src/Screens/CustomerPortal/Quote/QuotePage.css
@@ -1,7 +1,7 @@
 .customerQuotePage {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 25px;
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 2%;
@@ -44,6 +44,7 @@
     gap: 10%;
     justify-content: center;
     align-items: center;
+    transition: 0.5s;
 }
 
 .chooseDateButton {
@@ -70,6 +71,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: flex-start;
 }
 
 .quoteItemSpecSection {
@@ -99,8 +101,8 @@
 .quoteItemSpecSectionRightSection {
     margin-right: 10%;
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
+    /* grid-template-rows: 1fr 1fr; */
+    gap: 20px;
     width: 35%;
     align-items: start;
 }
@@ -109,7 +111,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 89%;
+    /* width: 89%; */
     align-items: center;
 }
 
