--- a/src/Screens/CustomerPortal/Quote/QuotePage.css
+++ b/src/Screens/CustomerPortal/Quote/QuotePage.css
@@ -144,6 +144,11 @@
     align-items: center;
 }
 
+.warning{
+    font-size: small;
+    color: red;
+}
+
 @media screen and (max-width: 1024px) {
     .customerQuotePage {
         padding-left: 2%;
