--- a/src/Screens/CustomerPortal/BillingPage/BillingPage.css
+++ b/src/Screens/CustomerPortal/BillingPage/BillingPage.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow-x: hidden;
+    background-color: white;
 }
 
 .billinPageMainSection {
