--- a/src/Screens/DriverLogin.css
+++ b/src/Screens/DriverLogin.css
@@ -4,13 +4,15 @@
   align-items: center;
   min-height: 100vh;
 }
+
 .loginHeader {
   display: flex;
-  position: fixed;
-  top: 10px;
+  /* position: fixed; */
+  /* top: 10px; */
   width: 100%;
   background-color: white;
   justify-content: center;
+  margin: 10px;
 }
 
 .screenHeight {
@@ -19,6 +21,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: white;
+  justify-content: space-between;
 }
 
 .imageContainer {
@@ -33,8 +36,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 100px;
-  border-radius: 20px;
+  /* margin: 100px; */
+  /* border-radius: 20px; */
 }
 
 .signupContainer {
@@ -48,21 +51,23 @@
 
 .footerContainer {
   display: flex;
-  position: fixed;
-  bottom: 0;
   width: 100vw;
   background-color: #323232;
   justify-content: space-around;
   align-items: center;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
+
 .phoneInput {
   background-color: #f8f8f8;
   border: none;
   border-radius: 10px;
   padding: 10px;
   width: 100%;
+  box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
 }
+
 .phoneInput input {
   font-size: 15px;
   background-color: #f8f8f8;
@@ -72,6 +77,11 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .screenHeight {
+    display: flex;
+    flex-direction: column;
+  }
+
   .mainContainer {
     display: flex;
     flex-direction: column;
@@ -91,8 +101,8 @@
 
   .footerContainer {
     display: flex;
-    position: fixed;
-    bottom: 0;
+    /* position: fixed; */
+    /* bottom: 0; */
     width: 100vw;
     flex-direction: column;
   }
