--- a/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
+++ b/src/Screens/DriverPortal/IncommingDeliveryDetailsScreen/DeliveryStatusScreen.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     background-color: #ffffff;
     gap: 20px;
     margin-left: 50px;
@@ -50,7 +50,7 @@
 
 .itemDimensions {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     /* margin-left: 50px;
     margin-right: 50px; */
 }
@@ -62,6 +62,7 @@
     margin-left: 50px;
     margin-right: 50px;
     gap: 20px;
+
 }
 
 .buttonContainer {
