--- a/src/Screens/CustomerPortal/NewQuoteDesign/NewQuoteDesign.css
+++ b/src/Screens/CustomerPortal/NewQuoteDesign/NewQuoteDesign.css
@@ -6,8 +6,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 25px;
-    /* padding-left: 10%;
-    padding-right: 10%; */
+    padding-left: 10%;
+    padding-right: 10%;
     padding-bottom: 5%;
     background-color: white;
     overflow-x: hidden;
@@ -280,6 +280,8 @@ body {
     flex-direction: column;
     gap: 10px;
     align-items: flex-start;
+    width: 100%;
+    /* background-color: green; */
 }
 
 .quoteItemSpecSection {
@@ -420,7 +422,7 @@ body {
     }
 
     .pickupSection {
-        gap: 5px;
+        gap: 10px;
         align-items: center;
         width: 100%;
     }
