--- a/src/Components/CustomTextFieldCSS.css
+++ b/src/Components/CustomTextFieldCSS.css
@@ -4,7 +4,7 @@
     border-radius: 15px;
     border: none;
     padding: 10px;
-    width: 100%;
+    /* width: 100%; */
     box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
     background-color: #FFECC0;
 }
