--- a/src/Screens/CustomerPortal/Components/CustomerPortalHeader/CustomerPortalHeader.css
+++ b/src/Screens/CustomerPortal/Components/CustomerPortalHeader/CustomerPortalHeader.css
@@ -5,8 +5,8 @@
     width: 100%;
     height: 60px;
     background-color: white;
-    z-index: 1000000;
-    margin-bottom: 20px;
+    /* z-index: 1000000; */
+    /* margin-bottom: 20px; */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.268);
 }
 
