--- a/src/Screens/CustomerPortal/NewQuoteDesign/NewQuoteDesign.css
+++ b/src/Screens/CustomerPortal/NewQuoteDesign/NewQuoteDesign.css
@@ -422,8 +422,8 @@ body {
     }
 
     .pickupSection {
-        gap: 10px;
-        align-items: center;
+        gap: 15px;
+        /* align-items: center; */
         width: 100%;
     }
 
