--- a/src/Screens/TempQuotePage.css
+++ b/src/Screens/TempQuotePage.css
@@ -8,6 +8,17 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.loadingScreen {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 2em;
+}
+
 .tempQuotePage>h1 {
     color: white;
     font-size: 40px;
