--- a/src/Screens/CustomerPortal/LatestPrototype/LatestPrototype.css
+++ b/src/Screens/CustomerPortal/LatestPrototype/LatestPrototype.css
@@ -487,3 +487,20 @@
         gap: 10px;
     }
 }
+.testimonialBoxImage {
+    width: 35%;
+    height: 80%;
+    background-color: white;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonialBoxImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
