--- a/src/Screens/DriverLogin.css
+++ b/src/Screens/DriverLogin.css
@@ -65,7 +65,7 @@
   border-radius: 10px;
   padding: 10px;
   width: 100%;
-  box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.25);height: 30px;
 }
 
 .phoneInput input {
